--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res/auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -217,6 +217,17 @@
             android:textAlignment="center"
             android:layout_marginTop="4dp"
             tools:text="Status: Device Admin INACTIVE" />
+
+        <TextView
+            android:id="@+id/syncStatusTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textAlignment="center"
+            android:textColor="@color/status_pending"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            tools:text="Sync Status: Syncing..." />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
